--- a/app/css/clean-blog.css
+++ b/app/css/clean-blog.css
@@ -395,6 +395,13 @@ img::-moz-selection {
   color: white;
   background: transparent;
 }
+
 body {
   -webkit-tap-highlight-color: #0085A1;
+}
+
+image {
+    height: 150px;
+    width: 150px;
+    background-color: red;
 }
