--- a/app/css/clean-blog.css
+++ b/app/css/clean-blog.css
@@ -4,6 +4,25 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
+ .datepickerdemoBasicUsage {
+   /** Demo styles for mdCalendar. */ }
+   .datepickerdemoBasicUsage md-content {
+     padding-bottom: 200px; }
+   .datepickerdemoBasicUsage .validation-messages {
+     font-size: 12px;
+     color: #dd2c00;
+     margin-left: 15px; }
+
+.dateselect {
+    background-color: cornsilk;
+}
+
+.center {
+    margin: auto;
+    border: 3px solid green;
+    padding: 10px;
+}
+
 .profile {
     display: inline-block;
     width: 150px;
