--- a/app/css/clean-blog.css
+++ b/app/css/clean-blog.css
@@ -68,7 +68,7 @@ input {
 
 
 body {
-    background-color: #00001a;
+    background-color: #000000;
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 20px;
   color: white;
